<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:text="@string/forgot_header"
            android:textStyle="bold"
            android:textSize="22sp"
            android:textColor="@color/textDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/forgot_desc"
            android:textColor="@color/textLight"
            android:layout_marginTop="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/etEmailPhone"
            android:hint="@string/your_email_or_phone"
            android:background="@drawable/bg_input"
            android:padding="14dp"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"/>

        <Button
            android:id="@+id/btnSend"
            android:text="@string/send_now"
            android:background="@drawable/bg_primary_btn"
            android:textColor="@android:color/white"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"/>
    </LinearLayout>
</ScrollView>
